# dwgmagic

./: .gitignore  .gitmodules  AGENTS.md  README.md  build_tectonica.ps1  checks.py  compare.py  config.py  convert.scr  convert_all.bat  debugscripts.py  dwgversioncheck.bat  gui.py  install.bat  install_DWGMAGIC.reg  logger.py  magicutils.py  main.py  merger.py  miscutil.py  mmm_script_template.tmpl  project_script_template.tmpl  pyproject.toml  readme.txt  requirements.txt  run_context_menu.bat  run_gui.bat  script_generator.py  sheet_script_template.tmpl  trustedFolderCheck.scr  uninstall.bat  update.bat  update.ps1  view_script_template.tmpl
.github/workflows/: ci.yml  release.yml
dwgmagic/: __init__.py  classify.py  cli.py  errors.py  logger.py  manifest.py  miscutil.py  script_generator.py  settings.py  trusted_folder.py  update.py
dwgmagic/core/: context.py  pipeline.py  stages.py
dwgmagic/gui/: __init__.py  app.py  state.py
dwgmagic/integrations/: autocad.py
dwgmagic/templates/: mmm_script_template.tmpl  project_script_template.tmpl  sheet_script_template.tmpl
dwgmagic/ui/: __init__.py  progress.py
install_tools/: requirements.txt  uninstall_DWGMAGIC.reg
templates/: manual_merge_bat_template.tmpl  mmm_script_template.tmpl  project_script_template.tmpl
tests/: test_autocad_integration.py  test_checks.py  test_classify.py  test_main.py  test_manifest.py  test_merger.py  test_miscutil.py  test_pipeline.py  test_scriptgenerator.py  test_settings.py  test_stages.py  test_trusted_paths.py  test_update.py
